# crypto_project

./: CMakeLists.txt  README.md
include/: gaml.h  hill.h  shamir.h
src/: main.cpp
src/gaml/: gaml.cpp
src/hill/: hill.cpp
src/shamir/: shamir.cpp
